fixed width so end of review does not get cut off

--- a/public/stylesheets/game-page.css
+++ b/public/stylesheets/game-page.css
@@ -97,9 +97,13 @@ h1 {
     margin-top: 10px;
     font-weight: bold;
     font-size: 25px;
-    width: 180px;
+    width: 200px;
     height: 45px;
     background-color: #dedede;
+}
+
+.edit_add_form {
+
 }
 
 .delete_button {
